# encosy-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt  EngineShaderBuild.cmake  ShaderBuild.cmake
Engine/Core/: Application.ixx  Interface.ixx  MatrixCalculations.ixx  Profiler.ixx  ProfilerInterface.ixx  SetupCoreECS.ixx  WindowManager.ixx
Engine/Core/ECS/: CameraComponent.ixx  CameraControllerSystem.ixx  CameraControllerSystemData.ixx  InputSystem.ixx  InputSystemData.ixx  MaterialComponent.ixx  ModelMatrixBuilderSystem.ixx  MovementComponent.ixx  MovementSystem.ixx  MovementSystemThreaded.ixx  SetupCoreECS.ixx  TestReadOnly.ixx  TransformComponent.ixx
Engine/EncosyCore/: ComponentManager.ixx  ComponentTypeStorage.ixx  EncosyCore.ixx  EncosyWorld.ixx  Entity.ixx  EntityManager.ixx  EntityTypeStorage.ixx  SharedBetweenManagers.ixx  System.ixx  SystemBase.ixx  SystemManager.ixx  SystemThreaded.ixx  ThreadedTaskRunner.ixx
Engine/RenderCore/: AllocationHandler.ixx  MeshLoader.ixx  PipelineBuilder.ixx  RenderCore.ixx  RenderCoreResources.ixx  RenderPipelineManager.ixx  ShaderLoader.ixx  TextureLoader.ixx  VulkanDescriptors.ixx  VulkanErrorLogger.ixx  VulkanImages.ixx  VulkanInitializers.ixx  VulkanRenderSystem.ixx  VulkanTypes.ixx  VulkanUtilities.ixx
Engine/RenderCore/ECS/: CameraComponent.ixx  CameraControllerSystem.ixx  CameraControllerSystemData.ixx  LitRenderSystem.ixx  LitRenderSystemThreaded.ixx  MaterialComponent.ixx  ModelMatrixBuilderSystem.ixx  ModelMatrixComponent.ixx  StaticComponent.ixx  UnlitRenderSystem.ixx
Engine/RenderCore/Shaders/: Gradient.comp  Lit.frag  Lit.vert  Unlit.frag
Engine/Testing/: main.cppm
Game/: GameShaderBuild.cmake
Game/CollisionDemos/: CollisionDemo.ixx  CollisionEventComponent.ixx  DyingFollowerComponent.ixx  DyingFollowerSystem.ixx  DynamicDemo.ixx  FollowerComponent.ixx  FollowerKillingSystem.ixx  FollowerModifySystem.ixx  FollowerMovementSystem.ixx  LeaderComponent.ixx  LeaderMovementSystem.ixx  MovementComponent.ixx  SpawningSystem.ixx  SpawningSystemData.ixx  SphereColliderComponent.ixx  SphereCollisionSystem.ixx
Game/Core/: main.cppm
Game/Demo/: CollisionDemo.ixx  CollisionEventComponent.ixx  Demo.ixx  DyingFollowerComponent.ixx  DyingFollowerSystem.ixx  DynamicDemo.ixx  FollowerComponent.ixx  FollowerKillingSystem.ixx  FollowerMovementSystem.ixx  LeaderMovementSystem.ixx  SpawningSystem.ixx  SpawningSystemData.ixx  SphereColliderComponent.ixx  SphereCollisionSystem.ixx
Game/RotationTest/: MovementComponent.ixx  MovementSystem.ixx  MovementSystemThreaded.ixx  RotationTest.ixx
Game/StaticTest/: StaticTest.ixx
Game/StressTest/: MovementSystem.ixx  MovementSystemThreaded.ixx  StressTest.ixx
Game/Thesis/: Thesis.ixx  ThesisComponents.ixx
Game/Thesis/MultiThreaded/: EntityDestroySystemMt1.ixx  EntityDestroySystemMt10.ixx  EntityDestroySystemMt2.ixx  EntityDestroySystemMt3.ixx  EntityDestroySystemMt4.ixx  EntityDestroySystemMt5.ixx  EntityDestroySystemMt6.ixx  EntityDestroySystemMt7.ixx  EntityDestroySystemMt8.ixx  EntityDestroySystemMt9.ixx  EntityModifySystemMt.ixx  EntityModifySystemMt1.ixx  EntityModifySystemMt10.ixx  EntityModifySystemMt2.ixx  EntityModifySystemMt3.ixx  EntityModifySystemMt4.ixx  EntityModifySystemMt5.ixx  EntityModifySystemMt6.ixx  EntityModifySystemMt7.ixx  EntityModifySystemMt8.ixx  EntityModifySystemMt9.ixx  EntitySpawningSystemMt1.ixx  EntitySpawningSystemMt10.ixx  EntitySpawningSystemMt2.ixx  EntitySpawningSystemMt3.ixx  EntitySpawningSystemMt4.ixx  EntitySpawningSystemMt5.ixx  EntitySpawningSystemMt6.ixx  EntitySpawningSystemMt7.ixx  EntitySpawningSystemMt8.ixx  EntitySpawningSystemMt9.ixx  ModelMatrixBuilderSystemMt.ixx  RotationSystemMt.ixx
Game/Thesis/SingleThreaded/: EntityDestroySystemSt1.ixx  EntityDestroySystemSt10.ixx  EntityDestroySystemSt2.ixx  EntityDestroySystemSt3.ixx  EntityDestroySystemSt4.ixx  EntityDestroySystemSt5.ixx  EntityDestroySystemSt6.ixx  EntityDestroySystemSt7.ixx  EntityDestroySystemSt8.ixx  EntityDestroySystemSt9.ixx  EntityModifySystemSt1.ixx  EntityModifySystemSt10.ixx  EntityModifySystemSt2.ixx  EntityModifySystemSt3.ixx  EntityModifySystemSt4.ixx  EntityModifySystemSt5.ixx  EntityModifySystemSt6.ixx  EntityModifySystemSt7.ixx  EntityModifySystemSt8.ixx  EntityModifySystemSt9.ixx  EntitySpawningSystemSt1.ixx  EntitySpawningSystemSt10.ixx  EntitySpawningSystemSt2.ixx  EntitySpawningSystemSt3.ixx  EntitySpawningSystemSt4.ixx  EntitySpawningSystemSt5.ixx  EntitySpawningSystemSt6.ixx  EntitySpawningSystemSt7.ixx  EntitySpawningSystemSt8.ixx  EntitySpawningSystemSt9.ixx  ModelMatrixBuilderSystemSt.ixx  RotationSystemSt.ixx
